json structure flattened (rust), Python access to json simplified, merged rl_control into main.py now functioning

--- a/streams-utils/justfile
+++ b/streams-utils/justfile
@@ -8,7 +8,8 @@ nv:
 
 	taskset -c 0-15 sudo apptainer build --sandbox \
 		nv.sandbox \
-		"docker://nvcr.io/nvidia/nvhpc:24.7-devel-cuda_multi-ubuntu22.04"
+		"docker://nvcr.io/nvidia/nvhpc:24.7-devel-cuda_multi-ubuntu22.04"	
+# "docker://nvcr.io/nvidia/nvhpc:25.3-devel-cuda_multi-ubuntu22.04"
 
 base:
 	mkdir -p $APPTAINER_TMPDIR
@@ -42,10 +43,9 @@ config:
 	echo {{config_output}}
 
 	# 600, 208, 100
-	#--fixed-dt 0.0008439 \
 
-	cargo r -- config-generator {{config_output}} \
-		{{streams_flow_type}} \
+	cargo r -- \
+		config-generator {{config_output}} {{streams_flow_type}} \
 		--steps 6 \
 		--reynolds-number 250 \
 		--mach-number 2.28 \
@@ -64,23 +64,22 @@ config:
 		--use-python \
 		--nymax-wr 201 \
 		--sensor-threshold 0.1 \
-		learning-based \
-			--slot-start 100 \
-			--slot-end 149 \
-			--train-episodes 2 \
-			--training-output {{training}} \
-			--eval-episodes 2 \
-			--eval-max-steps 6 \
-			--eval-output {{eval}} \
-			--checkpoint-interval 5 \
-			--checkpoint-dir {{checkpoint}} \
-			ddpg \
-				--seed 42 \
-				--amplitude 1.0 \
-				--learning-rate 0.0003 \
-				--gamma 0.99 \
-				--tau 0.005 \
-				--buffer-size 100000 \
+		learning-based ddpg \
+		    --slot-start 100 \
+		    --slot-end 149 \
+		    --train-episodes 2 \
+		    --training-output {{training}} \
+		    --eval-episodes 2 \
+		    --eval-max-steps 6 \
+		    --eval-output {{eval}} \
+		    --checkpoint-interval 5 \
+		    --checkpoint-dir {{checkpoint}} \
+		    --seed 42 \
+		    --amplitude 1.0 \
+		    --learning-rate 0.0003 \
+		    --gamma 0.99 \
+		    --tau 0.005 \
+		    --buffer-size 100000
 
 	cat {{config_output}}
 
