--- a/streams-utils/justfile
+++ b/streams-utils/justfile
@@ -9,7 +9,6 @@ nv:
 	taskset -c 0-15 sudo apptainer build --sandbox \
 		nv.sandbox \
 		"docker://nvcr.io/nvidia/nvhpc:24.7-devel-cuda_multi-ubuntu22.04"	
-# "docker://nvcr.io/nvidia/nvhpc:25.3-devel-cuda_multi-ubuntu22.04"
 
 base:
 	mkdir -p $APPTAINER_TMPDIR
@@ -64,7 +63,7 @@ config:
 		--use-python \
 		--nymax-wr 201 \
 		--sensor-threshold 0.1 \
-		learning-based ddpg \
+		learning-based dqn \
 		    --slot-start 100 \
 		    --slot-end 149 \
 		    --train-episodes 2 \
@@ -79,8 +78,10 @@ config:
 		    --hidden-width 8 \
 		    --batch-size 50 \
 		    --learning-rate 0.0003 \
+		    --target-update 1000 \
 		    --gamma 0.99 \
 		    --tau 0.005 \
+		    --epsilon 0.05 \
 		    --buffer-size 100000
 
 
