--- a/streams-utils/justfile
+++ b/streams-utils/justfile
@@ -54,10 +54,10 @@ config:
 	echo {{config_output}}
 
 	# 600, 208, 100
-
+		    
 	cargo r -- \
 		config-generator {{config_output}} {{streams_flow_type}} \
-		--steps 6 \
+		--steps 30000 \
 		--reynolds-number 250 \
 		--mach-number 2.28 \
 		--x-divisions 600 \
@@ -69,7 +69,7 @@ config:
 		--z-length 3.8 \
 		--rly-wr 2.5 \
 		--mpi-x-split 4 \
-		--span-average-io-steps 2 \
+		--span-average-io-steps 10 \
 		--probe-io-steps 0 \
 		--python-flowfield-steps 500 \
 		--use-python \
@@ -78,10 +78,10 @@ config:
 		learning-based ddpg \
 		    --slot-start 100 \
 		    --slot-end 149 \
-		    --train-episodes 2 \
+		    --train-episodes 1 \
 		    --training-output {{training}} \
-		    --eval-episodes 2 \
-		    --eval-max-steps 6 \
+		    --eval-episodes 1 \
+		    --eval-max-steps 30000 \
 		    --eval-output {{eval}} \
 		    --checkpoint-interval 1 \
 		    --checkpoint-dir {{checkpoint}} \
@@ -94,8 +94,8 @@ config:
 		    --buffer-size 100000
 
 	cat {{config_output}}
-
-
+	
+	
 run:
 	cargo r -- run-local \
 		--workdir {{results_dir}}/ \
@@ -113,20 +113,34 @@ eval:
                 --eval-only \
                 --checkpoint {{checkpoint}}/{{checkpoint_tag}} \
                 16
-  
+
 analysis:
         python3 $STREAMS_DIR/streamspy/Analysis/analysis_main.py \
                 --results_dir {{results_dir}} \
-                --analysis-tag ep_0000 \
-                --analysis-method DMD \
-              
+                --episode-tag ep_0000 \
+                --analysis-method POD \
+
 # analysis:
 #        python3 $STREAMS_DIR/streamspy/Analysis/analysis_main.py \
 #                --results_dir {{results_dir}} \
-#                --analysis-tag ep_0000 \
+#                --episode-tag ep_0000 \
 #                --analysis-method pysensors \
 #                --num-sensors 100 \
-
+                
+visualize:
+        python3 $STREAMS_DIR/streamspy/Visualize/visualize_main.py \
+                --results_dir {{results_dir}} \
+                --episode-tag ep_0000 \
+                --vis-type animation \
+                --snapshot-number 99 \
+                --variable u \
+                
+#visualize:
+#        python3 $STREAMS_DIR/streamspy/Visualize/visualize_main.py \
+#                --results_dir {{results_dir}} \
+#                --episode-tag ep_0000 \
+#                --vis-type animation \
+#                --variable {{variable}}
 
 # get a shell inside the container
 # requires the ./output directory (with its associated folders) to be created, 
