--- a/streams-utils/justfile
+++ b/streams-utils/justfile
@@ -45,6 +45,7 @@ checkpoint_tag := "best"
 # build a config json file as input to the solver
 config_output := "$STREAMS_DIR/streamspy/output/input.json"
 
+
 config:
 	echo {{config_output}}
 
@@ -52,7 +53,7 @@ config:
 
 	cargo r -- \
 		config-generator {{config_output}} {{streams_flow_type}} \
-		--steps 25 \
+		--steps 100 \
 		--reynolds-number 250 \
 		--mach-number 2.28 \
 		--x-divisions 600 \
@@ -64,19 +65,30 @@ config:
 		--z-length 3.8 \
 		--rly-wr 2.5 \
 		--mpi-x-split 4 \
-		--span-average-io-steps 10 \
+		--span-average-io-steps 2 \
 		--probe-io-steps 0 \
-		--python-flowfield-steps 0 \
+		--python-flowfield-steps 500 \
 		--use-python \
 		--nymax-wr 201 \
 		--sensor-threshold 0.1 \
-		open-loop dmdc \
+		learning-based ddpg \
 		    --slot-start 100 \
 		    --slot-end 149 \
+		    --train-episodes 2 \
+		    --training-output {{training}} \
+		    --eval-episodes 1 \
+		    --eval-max-steps 50 \
+		    --eval-output {{eval}} \
+		    --checkpoint-interval 5 \
+		    --checkpoint-dir {{checkpoint}} \
+		    --seed 42 \
 		    --amplitude 1.0 \
+		    --learning-rate 0.0003 \
+		    --gamma 0.99 \
+		    --tau 0.005 \
+		    --buffer-size 100000
 
-	cat {{config_output}}
-	
+	cat {{config_output}}	
 	
 run:
 	cargo r -- run-local \
