--- a/streams-utils/requirements.txt
+++ b/streams-utils/requirements.txt
@@ -1,31 +1,30 @@
-contourpy==1.3.3
-control==0.10.2
-cycler==0.12.1
-fonttools==4.59.0
-h5netcdf==1.6.4
-h5py==3.14.0
-joblib==1.5.1
-kiwisolver==1.4.9
-matplotlib==3.10.5
-mpi4py==4.1.0
-numpy==2.3.2
-packaging==25.0
-pandas==2.3.1
-Pillow==11.3.0
-PyDMD==2025.8.1
-pyparsing==3.2.3
-python-dateutil==2.9.0.post0
+contourpy==1.1.1
+control==0.9.4
+cycler==0.11.0
+fonttools==4.43.1
+h5netcdf==1.1.0
+h5py==3.11.0
+joblib==1.3.2
+kiwisolver==1.4.5
+matplotlib==3.8.2
+mpi4py==3.1.5
+numpy==1.26.4
+packaging==23.2
+pandas==2.1.4
+Pillow==10.1.0
+pydmd==0.4.1
+pyparsing==3.1.1
+python-dateutil==2.8.2
 python-sensors==0.3.5
-pytz==2025.2
-scikit-learn==1.7.1
-scipy==1.16.1
-setuptools==80.9.0
-six==1.17.0
-threadpoolctl==3.6.0
-tzdata==2025.2
-wheel==0.45.1
-xarray==2025.7.1
-typer
-PyYAML
-
+pytz==2023.3.post1
+scikit-learn==1.3.2
+scipy==1.11.4
+setuptools==68.2.2
+six==1.16.0
+threadpoolctl==3.2.0
+tzdata==2023.3
+wheel==0.43.0
+xarray==2023.9.0
+typer==0.9.0
+PyYAML==6.0.1
 
