--- a/streams-utils/requirements.txt
+++ b/streams-utils/requirements.txt
@@ -21,10 +21,13 @@ scikit-learn==1.3.2
 scipy==1.11.4
 setuptools==68.2.2
 six==1.16.0
+snakeviz==2.2.2
 threadpoolctl==3.2.0
 tzdata==2023.3
 wheel==0.43.0
 xarray==2023.9.0
 typer==0.9.0
 PyYAML==6.0.1
+
+
 
