--- a/streams-utils/justfile
+++ b/streams-utils/justfile
@@ -76,13 +76,29 @@ config:
 		--use-python \
 		--nymax-wr 201 \
 		--sensor-threshold 0.1 \
-		--restart-flag 1 \
-		--disable-restart-io \
+		--restart-flag 0 \
 		--dtsave-restart 3.0 \
-		open-loop constant \
+		learning-based ddpg \
 		    --slot-start 100 \
 		    --slot-end 149 \
+		    --obs-type v \
+		    --obs-xstart 1 \
+		    --obs-xend 50 \
+		    --obs-ystart 1 \
+		    --obs-yend 50 \
+		    --lag-steps 100 \
+		    --train-episodes 1 \
+		    --training-output {{training}} \
+		    --eval-episodes 2 \
+		    --eval-max-steps 50 \
+		    --eval-output {{eval}} \
+		    --checkpoint-interval 5 \
+		    --checkpoint-dir {{checkpoint}} \
 		    --amplitude 1.0 \
+		    --learning-rate 0.0003 \
+		    --gamma 0.99 \
+		    --tau 0.005 \
+		    --buffer-size 100000
 
 
 		
